<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/bckgr"
    android:gravity="center"
    android:id="@+id/loginLayout">

    <TextView
        android:id="@+id/titleViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whatsinmyfridge_nlogin"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="34sp"
        android:textColor="@android:color/black"/>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/loginTxtMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="156dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_mail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/box_rounded"
        android:textStyle="bold"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/loginTxtPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="261dp" />

    <EditText
        android:id="@+id/login_pw"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="283dp"
        android:background="@drawable/box_rounded"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/login_login"
        android:layout_marginTop="10dp"
        android:layout_width="196dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="389dp"
        android:background="@drawable/box_rounded" />

    <Button
        android:id="@+id/login_signup"
        android:layout_width="249dp"
        android:layout_height="66dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="469dp"
        android:background="@drawable/box_rounded"
        />

    <Button
        android:id="@+id/login_guest"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/box_rounded"
        android:gravity="center"
        android:text="@string/login_as_guest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="469dp" />

    <TextView
        android:id="@+id/forgottenPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:gravity="center"
        android:linksClickable="true"
        android:singleLine="false"
        android:text="@string/i_have_forgotten_my_password"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

</LinearLayout>